tests/error/errors_on_usage/else_type_change.err
Guppy compilation failed. Error in file $FILE:11

9:     else:
10:        y = True
11:    return y
              ^
GuppyTypeError: Expected return value of type `int`, got `bool`
